<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebAppRunner</string>
    <string name="web_settings">App settings</string>
    <string name="url">Url</string>
    <string name="license">License</string>
    <string name="license_type">License type</string>
    <string name="license_date">License date</string>
    <string name="license_lastchk">License last check</string>
	<string name="license_error">License error!</string>
	<string name="license_error_version">License error! Incorrect program version : %1$s"</string>
	<string name="license_expire">License expiration date : %1$s</string>
    <string name="device_id">Device ID</string>
    <string name="btn_save">Save</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
	<string name="btn_yes">Yes</string>
	<string name="btn_no">No</string>
	<string name="page_reload">Page reload</string>
	<string name="open_config">Settings</string>
    <string name="netEnabled">Network provider enabled..</string>
    <string name="gpsEnabled">GPS provider enabled..</string>
    <string name="please_wait">Please wait!</string>
	<string name="please_wait_time">Please wait! [%1$d]</string>
    <string name="title_signature">Signature Confirmation</string>
    <string name="title_location">Get fine location</string>
	<string name="title_shortcut">Create shortcut</string>
	<string name="title_donation">Donation</string>
	<string name="title_nfcread">Nfc reader</string>
	<string name="question_exit">Are you sure you want to exit?</string>
	<string name="location_disabled">Location is disabled. Please enable it!</string>
	<string name="loc_coor">Lng: %1$3.6f; Lat: %2$3.6f</string>
	<string name="loc_accu">Accuracy: %1$.0f m [%2$s]</string>
	<string name="fullscreen_mode">Full screen mode</string>
	<string name="settings_after_restart">Applied need restart.</string>
	<string name="get_url_data">Get shortcut data</string>
	<string name="add_shortcut">Create shortcut</string>
	<string name="sign_orientation">Sign screen is Portrai</string>
	<string name="sign_orienatation_summary">Signature screen is deafult landscape orientation</string>
	<string name="nfc_not_supported">NFC is not supported!</string>
	<string name="nfc_disabled">NFC is disabled!</string>
	<string name="nfc_waiting">Waiting NFC tag scanning..</string>
	<string name="ndef_not_support_tag">NDEF is not supported by this Tag.</string>
	<string name="unsupported_encoding">Unsupported encoding.</string>
	<string name="shortcut_not_supported">Pin shortcut request not supported!</string>

	<string name="gcm_defaultSenderId">517920729052</string>

	<string-array name="donation_google_catalog_values">
        <item>Coffee</item>
        <item>Beer</item>
		<item>Dinner</item>
		<item>New feature</item>
    </string-array>

    <string name="donation_paypal_item">Donation</string>

	<!-- Rate -->
	<string name="rate_dialog_title">Rate this app</string>
	<string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>

</resources>

