<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	<Button	android:id="@+id/btnRefresh"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/page_reload" />

	<Button	android:id="@+id/btnSettings"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/open_config" />

	<Button	android:id="@+id/btnShortcut"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/add_shortcut" />
	
	<Button android:id ="@+id/btnDonation"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="Donate" />

</LinearLayout>
