<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/linearLayout1"
	android:layout_width="500dp"
	android:layout_height="300dp"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/getsign"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:layout_weight=".35"
			android:text="@string/btn_save"/>

		<Button
			android:id="@+id/clear"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:layout_weight=".35"
			android:text="@string/btn_clear"/>

		<Button
			android:id="@+id/cancel"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:layout_weight=".35"
			android:text="@string/btn_cancel"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"/>

</LinearLayout>

