<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/url" />

	<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/etUrl" />

	<Button	android:id="@+id/btnGetData"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/get_url_data" />

	<ProgressBar android:id="@+id/pbStatus"
		style="?android:attr/progressBarStyleHorizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="2dp" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<ImageView android:id="@+id/ivFavicon"
			android:layout_width="64dp"
			android:layout_height="64dp" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Title" />

			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/etName" />

		</LinearLayout>

	</LinearLayout>

	<Button	android:id="@+id/btnAddIcon"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/add_shortcut" />
</LinearLayout>
